--- a/travel-trucks/package.json
+++ b/travel-trucks/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
-    "react": "^19.1.0",
+    "react": "^18.0.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.0.0",
     "react-hot-toast": "^2.5.2",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react": "^4.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
