--- a/travel-trucks/package.json
+++ b/travel-trucks/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://dm-zhuk.github.io/test-task-reactjs/",
-   "scripts": {
+  "scripts": {
     "dev": "vite",
     "build:github": "cross-env VITE_DEPLOY_TARGET=github vite build --mode production",
     "build:netlify": "vite build --mode production",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
